[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/Plaque.png" type="Texture" id=2]
[ext_resource path="res://Art/EbaloLaugh.png" type="Texture" id=3]
[ext_resource path="res://Art/EbaloSadness.png" type="Texture" id=4]
[ext_resource path="res://Art/EbaloNeutral.png" type="Texture" id=5]
[ext_resource path="res://Art/EbaloAnger.png" type="Texture" id=6]
[ext_resource path="res://Art/HandBalloons.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Roboto.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Art/endScreen.png" type="Texture" id=9]
[ext_resource path="res://Art/HandFree.png" type="Texture" id=10]
[ext_resource path="res://Art/HandBanana.png" type="Texture" id=11]
[ext_resource path="res://Art/HandBabyBomb.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 8 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dash" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 83.0
texture = ExtResource( 2 )

[node name="Anger" type="TextureRect" parent="."]
margin_left = 410.0
margin_top = 24.0
margin_right = 650.0
margin_bottom = 264.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Sadness" type="TextureRect" parent="."]
anchor_left = 0.447
anchor_right = 0.447
margin_left = 0.272003
margin_top = 24.0
margin_right = 240.272
margin_bottom = 264.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Neutral" type="TextureRect" parent="."]
anchor_left = 0.494
anchor_right = 0.494
margin_left = 0.143951
margin_top = 24.0
margin_right = 240.144
margin_bottom = 264.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Laugh" type="TextureRect" parent="."]
anchor_left = 0.541
anchor_right = 0.541
margin_left = 0.0158691
margin_top = 24.0
margin_right = 240.016
margin_bottom = 264.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="HandFree" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -294.0
margin_bottom = 206.0
texture = ExtResource( 10 )

[node name="HandBalloons" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -492.0
margin_bottom = 8.0
texture = ExtResource( 7 )

[node name="HandBanana" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -299.0
margin_top = -294.0
margin_right = 1.0
margin_bottom = 206.0
texture = ExtResource( 11 )

[node name="HandBabyBomb" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -298.0
margin_top = -487.0
margin_right = 2.0
margin_bottom = 13.0
texture = ExtResource( 12 )

[node name="endScreen" type="TextureRect" parent="."]
visible = false
margin_left = -15.0
margin_top = -7.0
margin_right = 1031.0
margin_bottom = 598.0
texture = ExtResource( 9 )
expand = true

[node name="endGameText" type="Label" parent="."]
visible = false
margin_left = 220.0
margin_top = 250.0
margin_right = 796.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 1 )
text = "Win"
align = 1
valign = 1
